Fix date missaligned

--- a/css/kindle.css
+++ b/css/kindle.css
@@ -62,7 +62,7 @@ html.night {
     font-size: 30px;
     font-size: 2.8rem;
     position: absolute;
-    bottom: 47%;
+    bottom: 46%;
     left: 3.3%;
 }
 
